<resources>
    <string name="app_name">Aesthetica</string>
    <!-- Strings para el layout de registro/login -->
    <string name="explore_your_dreams">Explora tus sueños</string>
    <string name="sign_up">Registrarse</string>
    <string name="sign_in">Iniciar sesión</string>
    <string name="sign_in_tv">Inicio de sesión</string>
    <string name="access">ACESSO</string>
    <string name="register">REGISTRO</string>
    <string name="create">Crear</string>
    <string name="name">Nombre</string>
    <string name="surname">Apellido</string>
    <string name="email">Correo electronico</string>
    <string name="sign_in_user">Usuario</string>
    <string name="sign_in_pass">Contraseña</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="create_acc">Crear cuenta</string>
    <string name="enter_your_phone_number">Introduce tu número de teléfono</string>
    <string name="continuer">Continuar</string>

    <!-- Strings adicionales que podrías necesitar -->
    <string name="welcome_message">Bienvenido a IA App, tu espacio para explorar el arte.</string>
    <string name="logout">Cerrar sesión</string>
    <string name="user_profile">Perfil de usuario</string>
    <string name="settings">Configuración</string>
    <string name="help_support">Ayuda y soporte</string>
    <string name="terms_conditions">Términos y condiciones</string>
    <string name="privacy_policy">Política de privacidad</string>
</resources>