<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Header -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/edensor_tittle"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.272" />

    <TextView
        android:id="@+id/access"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/themunday"
        android:text="@string/access"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.905"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.521" />

    <View
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.142"
        tools:layout_editor_absoluteX="0dp" />

    <!-- Form -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_login"
        app:layout_constraintBottom_toTopOf="@id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageView"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32sp"
        android:layout_marginTop="60sp"
        android:layout_marginEnd="32sp"
        android:fontFamily="@font/raleway_extralight"
        android:background="@drawable/edit_text_style"
        android:hint="Correo electrónico"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/base_neutral_oscura"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_style"
        android:layout_marginStart="32sp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="32sp"
        android:fontFamily="@font/raleway_extralight"
        android:hint="@string/sign_in_pass"
        android:inputType="textPassword"
        android:textColorHint="@color/base_neutral_oscura"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email" />

    <TextView
        android:id="@+id/tvForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.146"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <ImageButton
        android:id="@+id/sign_in"
        android:layout_width="277sp"
        android:layout_height="51sp"
        android:layout_marginTop="364dp"
        android:background="@drawable/btn_rounded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/raleway_extralight"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/sign_in"
        app:layout_constraintEnd_toEndOf="@+id/sign_in"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/sign_in"
        app:layout_constraintTop_toTopOf="@+id/sign_in"
        app:layout_constraintVertical_bias="0.272" />

    <!-- Footer -->

    <TextView
        android:id="@+id/create_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/create_acc"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in" />

    <View
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="188dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/footer_tv"
        android:layout_width="174dp"
        android:layout_height="41dp"
        android:layout_marginBottom="11dp"
        android:fontFamily="@font/edensor_tittle"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/instagram"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/footer" />

    <ImageButton
        android:id="@+id/twitter"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:layout_marginStart="116dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/btn_circle_white"
        android:src="@drawable/x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/facebook"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/btn_circle_white"
        android:src="@drawable/ic_facebook"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/instagram" />


    <ImageButton
        android:id="@+id/instagram"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/btn_circle_white"
        android:src="@drawable/ic_instagram"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/twitter" />

    <TextView
        android:id="@+id/contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/raleway"
        android:text="contactanos"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twitter"
        app:layout_constraintVertical_bias="0.609" />

    <TextView
        android:id="@+id/terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway"
        android:text="terminos"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/subs"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toEndOf="@+id/contact"
        app:layout_constraintTop_toBottomOf="@+id/instagram"
        app:layout_constraintVertical_bias="0.609" />

    <TextView
        android:id="@+id/subs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/raleway"
        android:text="suscripciones"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facebook"
        app:layout_constraintVertical_bias="0.609" />


</androidx.constraintlayout.widget.ConstraintLayout>